// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders App component to DOM 1`] = `
<div>
  <h2>
    OnPoint 👇
  </h2>
  <div>
    <p>
      Home
    </p>
    <p>
      Search
    </p>
    <p>
      Notifications
    </p>
    <p>
      Me
    </p>
  </div>
  <div>
    <h4>
      Current Location
    </h4>
    <p>
      South of Market St
    </p>
  </div>
  <div>
    <h3>
      PostList
    </h3>
    <div>
      <p>
        Keith - 10m Ago
      </p>
      <p>
        What does Tri Tip even mean?
      </p>
    </div>
    <div>
      <p>
        Keith - 10m Ago
      </p>
      <p>
        What does Tri Tip even mean?
      </p>
    </div>
    <div>
      <p>
        Keith - 10m Ago
      </p>
      <p>
        What does Tri Tip even mean?
      </p>
    </div>
    <div>
      <p>
        Keith - 10m Ago
      </p>
      <p>
        What does Tri Tip even mean?
      </p>
    </div>
  </div>
</div>
`;

exports[`renders CurrentLocation component to DOM 1`] = `
<div>
  <h4>
    Current Location
  </h4>
  <p>
    South of Market St
  </p>
</div>
`;

exports[`renders ListEntry component to DOM 1`] = `
<div>
  <p>
    Keith - 10m Ago
  </p>
  <p>
    What does Tri Tip even mean?
  </p>
</div>
`;

exports[`renders MainQuestion component to DOM 1`] = `
<div>
  <p>
    Keith - 22s ago
  </p>
  <p>
    Is Chipotle out of guac?!
  </p>
  <p>
    Hack Reactor
  </p>
</div>
`;

exports[`renders Menu component to DOM 1`] = `
<div>
  <p>
    Home
  </p>
  <p>
    Search
  </p>
  <p>
    Notifications
  </p>
  <p>
    Me
  </p>
</div>
`;

exports[`renders PostList component to DOM 1`] = `
<div>
  <h3>
    PostList
  </h3>
  <div>
    <p>
      Keith - 10m Ago
    </p>
    <p>
      What does Tri Tip even mean?
    </p>
  </div>
  <div>
    <p>
      Keith - 10m Ago
    </p>
    <p>
      What does Tri Tip even mean?
    </p>
  </div>
  <div>
    <p>
      Keith - 10m Ago
    </p>
    <p>
      What does Tri Tip even mean?
    </p>
  </div>
  <div>
    <p>
      Keith - 10m Ago
    </p>
    <p>
      What does Tri Tip even mean?
    </p>
  </div>
</div>
`;
